# CPPCon-2022

./: CMakeLists.txt  README.md  efficiency is usually the name of the game-final.pptx
apps/conflict_miss/: CMakeLists.txt
apps/conflict_miss/src/: main.cpp
apps/false_sharing/: CMakeLists.txt
apps/false_sharing/src/: main.cpp
apps/matrix/: CMakeLists.txt
apps/matrix/src/: main.cpp
apps/stride_matrix/: CMakeLists.txt
apps/stride_matrix/src/: main.cpp
cmake/modules/: Compilation.cmake  Conan.cmake  ConvenienceFunctions.cmake  Dependencies.cmake  Installation.cmake  Target.cmake
cmake/modules/compilation/: CompilationConfigurations_Darwin.cmake  CompilationConfigurations_Linux.cmake  CompilationConfigurations_Windows.cmake
cmake/modules/dependencies/setup_packages/: Setup_fmt.cmake
libs/common/: CMakeLists.txt
libs/common/include/common/: Rolex.hpp  simplethreadpool.hpp  timedScope.hpp
libs/common/src/: Rolex.cpp  simplethreadpool.cpp
